--- a/Vanp.Web/Vanp.Web.csproj
+++ b/Vanp.Web/Vanp.Web.csproj
@@ -500,7 +500,6 @@
     <Content Include="images\portlet-reload-icon.png" />
     <Content Include="images\portlet-remove-icon-white.png" />
     <Content Include="images\portlet-remove-icon.png" />
-    <Content Include="images\products\anh-dep-ve-hoa-hung-duong021.jpg" />
     <Content Include="images\products\product1.jpg" />
     <Content Include="images\products\product10.jpg" />
     <Content Include="images\products\product11.jpg" />
@@ -526,6 +525,7 @@
     <Content Include="images\to-top-arrow.png" />
     <Content Include="images\top-bg.gif" />
     <Content Include="Scripts\apps\login.js" />
+    <Content Include="Scripts\apps\validate-addpro.js" />
     <Content Include="Scripts\bootstrap-datetimepicker\css\bootstrap-datetimepicker-standalone.css" />
     <Content Include="Scripts\bootstrap-datetimepicker\css\bootstrap-datetimepicker.css" />
     <Content Include="Scripts\bootstrap-datetimepicker\css\bootstrap-datetimepicker.min.css" />
