--- a/Vanp.Web/Web.config
+++ b/Vanp.Web/Web.config
@@ -11,7 +11,7 @@
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-Vanp.Web-20170514044121.mdf;Initial Catalog=aspnet-Vanp.Web-20170514044121;Integrated Security=True" providerName="System.Data.SqlClient" />
-    <add name="Vanp_Entities" connectionString="metadata=res://*/Entites.Vanp.csdl|res://*/Entites.Vanp.ssdl|res://*/Entites.Vanp.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\SQLEXPRESS;initial catalog=vanp_db;integrated security=True;multipleactiveresultsets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="Vanp_Entities" connectionString="metadata=res://*/Entites.Vanp.csdl|res://*/Entites.Vanp.ssdl|res://*/Entites.Vanp.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=ANHNGUYEN\SQLEXPRESS;initial catalog=vanp_db;integrated security=True;multipleactiveresultsets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
