--- a/Vanp.Web/Vanp.Web.csproj
+++ b/Vanp.Web/Vanp.Web.csproj
@@ -501,6 +501,9 @@
     <Content Include="images\portlet-remove-icon-white.png" />
     <Content Include="images\portlet-remove-icon.png" />
     <Content Include="images\products\856503_3cf61.jpg" />
+    <Content Include="images\products\anh-1-1376059378438.png" />
+    <Content Include="images\products\anh-dep-ve-hoa-hung-duong021.jpg" />
+    <Content Include="images\products\khac-biet-giua-may-anh-so-va-may-anh-co-1.jpg" />
     <Content Include="images\products\product1.jpg" />
     <Content Include="images\products\product10.jpg" />
     <Content Include="images\products\product11.jpg" />
