--- a/Vanp.Web/Vanp.Web.csproj
+++ b/Vanp.Web/Vanp.Web.csproj
@@ -501,9 +501,6 @@
     <Content Include="images\portlet-remove-icon-white.png" />
     <Content Include="images\portlet-remove-icon.png" />
     <Content Include="images\products\856503_3cf61.jpg" />
-    <Content Include="images\products\anh-1-1376059378438.png" />
-    <Content Include="images\products\anh-dep-ve-hoa-hung-duong021.jpg" />
-    <Content Include="images\products\khac-biet-giua-may-anh-so-va-may-anh-co-1.jpg" />
     <Content Include="images\products\product1.jpg" />
     <Content Include="images\products\product10.jpg" />
     <Content Include="images\products\product11.jpg" />
@@ -562,7 +559,6 @@
     <Content Include="Areas\Customer\Views\User\Index.cshtml" />
     <Content Include="Areas\Customer\Views\Shared\_CustomerLayout.cshtml" />
     <Content Include="Areas\Customer\Views\_ViewStart.cshtml" />
-    <Content Include="Areas\Customer\Views\User\SendCode.cshtml" />
     <Content Include="Areas\Customer\Views\User\VerifyCode.cshtml" />
     <Content Include="Areas\Customer\Views\User\View.cshtml" />
     <Content Include="Content\bootstrap-select\css\bootstrap-select.css.map" />
@@ -574,6 +570,7 @@
     <Content Include="Content\tinymce\skins\lightgray\fonts\tinymce.eot" />
     <Content Include="Content\tinymce\skins\lightgray\fonts\tinymce.ttf" />
     <Content Include="Content\tinymce\skins\lightgray\fonts\tinymce.woff" />
+    <Content Include="Areas\Customer\Views\User\UserProfile.cshtml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\bootstrap\css\bootstrap-theme.css" />
     <Content Include="Scripts\bootstrap\css\bootstrap-theme.min.css" />
