--- a/Vanp.DAL/Vanp.DAL.csproj
+++ b/Vanp.DAL/Vanp.DAL.csproj
@@ -87,6 +87,11 @@
     <Compile Include="Entites\Vote.cs">
       <DependentUpon>Vanp.tt</DependentUpon>
     </Compile>
+    <Compile Include="Entites\Wishlist.cs">
+      <DependentUpon>Vanp.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Repositories\Interface\IRequestRepository.cs" />
+    <Compile Include="Repositories\RequestRepository.cs" />
     <Compile Include="Repositories\Interface\IProductRepository.cs" />
     <Compile Include="Repositories\Interface\IUserRoleRepository.cs" />
     <Compile Include="Repositories\ProductRepository.cs" />
