--- a/Vanp.DAL/Vanp.DAL.csproj
+++ b/Vanp.DAL/Vanp.DAL.csproj
@@ -128,6 +128,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Vanp.edmx</DependentUpon>
     </Compile>
+    <Compile Include="Utils\Enum\Role.cs" />
     <Compile Include="Utils\Enum\RequestType.cs" />
     <Compile Include="Utils\Enum\StatusSystem.cs" />
     <Compile Include="Utils\Extentions\Extention.cs" />
