--- a/Vanp.Web/Vanp.Web.csproj
+++ b/Vanp.Web/Vanp.Web.csproj
@@ -236,6 +236,127 @@
     <Compile Include="Startup.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\boostrap-file-input\css\fileinput-rtl.css" />
+    <Content Include="Content\boostrap-file-input\css\fileinput-rtl.min.css" />
+    <Content Include="Content\boostrap-file-input\css\fileinput.css" />
+    <Content Include="Content\boostrap-file-input\css\fileinput.min.css" />
+    <Content Include="Content\boostrap-file-input\js\fileinput.js" />
+    <Content Include="Content\boostrap-file-input\js\fileinput.min.js" />
+    <Content Include="Content\boostrap-file-input\js\locales\ar.js" />
+    <Content Include="Content\boostrap-file-input\js\locales\bg.js" />
+    <Content Include="Content\boostrap-file-input\js\locales\ca.js" />
+    <Content Include="Content\boostrap-file-input\js\locales\cr.js" />
+    <Content Include="Content\boostrap-file-input\js\locales\cz.js" />
+    <Content Include="Content\boostrap-file-input\js\locales\da.js" />
+    <Content Include="Content\boostrap-file-input\js\locales\de.js" />
+    <Content Include="Content\boostrap-file-input\js\locales\el.js" />
+    <Content Include="Content\boostrap-file-input\js\locales\es.js" />
+    <Content Include="Content\boostrap-file-input\js\locales\et.js" />
+    <Content Include="Content\boostrap-file-input\js\locales\fa.js" />
+    <Content Include="Content\boostrap-file-input\js\locales\fi.js" />
+    <Content Include="Content\boostrap-file-input\js\locales\fr.js" />
+    <Content Include="Content\boostrap-file-input\js\locales\gl.js" />
+    <Content Include="Content\boostrap-file-input\js\locales\hu.js" />
+    <Content Include="Content\boostrap-file-input\js\locales\id.js" />
+    <Content Include="Content\boostrap-file-input\js\locales\it.js" />
+    <Content Include="Content\boostrap-file-input\js\locales\ja.js" />
+    <Content Include="Content\boostrap-file-input\js\locales\kr.js" />
+    <Content Include="Content\boostrap-file-input\js\locales\kz.js" />
+    <Content Include="Content\boostrap-file-input\js\locales\LANG.js" />
+    <Content Include="Content\boostrap-file-input\js\locales\nl.js" />
+    <Content Include="Content\boostrap-file-input\js\locales\no.js" />
+    <Content Include="Content\boostrap-file-input\js\locales\pl.js" />
+    <Content Include="Content\boostrap-file-input\js\locales\pt-BR.js" />
+    <Content Include="Content\boostrap-file-input\js\locales\pt.js" />
+    <Content Include="Content\boostrap-file-input\js\locales\ro.js" />
+    <Content Include="Content\boostrap-file-input\js\locales\ru.js" />
+    <Content Include="Content\boostrap-file-input\js\locales\sk.js" />
+    <Content Include="Content\boostrap-file-input\js\locales\sl.js" />
+    <Content Include="Content\boostrap-file-input\js\locales\sv.js" />
+    <Content Include="Content\boostrap-file-input\js\locales\th.js" />
+    <Content Include="Content\boostrap-file-input\js\locales\tr.js" />
+    <Content Include="Content\boostrap-file-input\js\locales\uk.js" />
+    <Content Include="Content\boostrap-file-input\js\locales\vi.js" />
+    <Content Include="Content\boostrap-file-input\js\locales\zh-TW.js" />
+    <Content Include="Content\boostrap-file-input\js\locales\zh.js" />
+    <Content Include="Content\boostrap-file-input\js\plugins\piexif.js" />
+    <Content Include="Content\boostrap-file-input\js\plugins\piexif.min.js" />
+    <Content Include="Content\boostrap-file-input\js\plugins\purify.js" />
+    <Content Include="Content\boostrap-file-input\js\plugins\purify.min.js" />
+    <Content Include="Content\boostrap-file-input\js\plugins\sortable.js" />
+    <Content Include="Content\boostrap-file-input\js\plugins\sortable.min.js" />
+    <Content Include="Content\bootstrap-select\css\bootstrap-select.css" />
+    <Content Include="Content\bootstrap-select\css\bootstrap-select.min.css" />
+    <Content Include="Content\bootstrap-select\js\bootstrap-select.js" />
+    <Content Include="Content\bootstrap-select\js\bootstrap-select.min.js" />
+    <Content Include="Content\bootstrap-select\js\i18n\defaults-ar_AR.js" />
+    <Content Include="Content\bootstrap-select\js\i18n\defaults-ar_AR.min.js" />
+    <Content Include="Content\bootstrap-select\js\i18n\defaults-bg_BG.js" />
+    <Content Include="Content\bootstrap-select\js\i18n\defaults-bg_BG.min.js" />
+    <Content Include="Content\bootstrap-select\js\i18n\defaults-cro_CRO.js" />
+    <Content Include="Content\bootstrap-select\js\i18n\defaults-cro_CRO.min.js" />
+    <Content Include="Content\bootstrap-select\js\i18n\defaults-cs_CZ.js" />
+    <Content Include="Content\bootstrap-select\js\i18n\defaults-cs_CZ.min.js" />
+    <Content Include="Content\bootstrap-select\js\i18n\defaults-da_DK.js" />
+    <Content Include="Content\bootstrap-select\js\i18n\defaults-da_DK.min.js" />
+    <Content Include="Content\bootstrap-select\js\i18n\defaults-de_DE.js" />
+    <Content Include="Content\bootstrap-select\js\i18n\defaults-de_DE.min.js" />
+    <Content Include="Content\bootstrap-select\js\i18n\defaults-en_US.js" />
+    <Content Include="Content\bootstrap-select\js\i18n\defaults-en_US.min.js" />
+    <Content Include="Content\bootstrap-select\js\i18n\defaults-es_CL.js" />
+    <Content Include="Content\bootstrap-select\js\i18n\defaults-es_CL.min.js" />
+    <Content Include="Content\bootstrap-select\js\i18n\defaults-es_ES.js" />
+    <Content Include="Content\bootstrap-select\js\i18n\defaults-es_ES.min.js" />
+    <Content Include="Content\bootstrap-select\js\i18n\defaults-eu.js" />
+    <Content Include="Content\bootstrap-select\js\i18n\defaults-eu.min.js" />
+    <Content Include="Content\bootstrap-select\js\i18n\defaults-fa_IR.js" />
+    <Content Include="Content\bootstrap-select\js\i18n\defaults-fa_IR.min.js" />
+    <Content Include="Content\bootstrap-select\js\i18n\defaults-fi_FI.js" />
+    <Content Include="Content\bootstrap-select\js\i18n\defaults-fi_FI.min.js" />
+    <Content Include="Content\bootstrap-select\js\i18n\defaults-fr_FR.js" />
+    <Content Include="Content\bootstrap-select\js\i18n\defaults-fr_FR.min.js" />
+    <Content Include="Content\bootstrap-select\js\i18n\defaults-hu_HU.js" />
+    <Content Include="Content\bootstrap-select\js\i18n\defaults-hu_HU.min.js" />
+    <Content Include="Content\bootstrap-select\js\i18n\defaults-id_ID.js" />
+    <Content Include="Content\bootstrap-select\js\i18n\defaults-id_ID.min.js" />
+    <Content Include="Content\bootstrap-select\js\i18n\defaults-it_IT.js" />
+    <Content Include="Content\bootstrap-select\js\i18n\defaults-it_IT.min.js" />
+    <Content Include="Content\bootstrap-select\js\i18n\defaults-ko_KR.js" />
+    <Content Include="Content\bootstrap-select\js\i18n\defaults-ko_KR.min.js" />
+    <Content Include="Content\bootstrap-select\js\i18n\defaults-lt_LT.js" />
+    <Content Include="Content\bootstrap-select\js\i18n\defaults-lt_LT.min.js" />
+    <Content Include="Content\bootstrap-select\js\i18n\defaults-nb_NO.js" />
+    <Content Include="Content\bootstrap-select\js\i18n\defaults-nb_NO.min.js" />
+    <Content Include="Content\bootstrap-select\js\i18n\defaults-nl_NL.js" />
+    <Content Include="Content\bootstrap-select\js\i18n\defaults-nl_NL.min.js" />
+    <Content Include="Content\bootstrap-select\js\i18n\defaults-pl_PL.js" />
+    <Content Include="Content\bootstrap-select\js\i18n\defaults-pl_PL.min.js" />
+    <Content Include="Content\bootstrap-select\js\i18n\defaults-pt_BR.js" />
+    <Content Include="Content\bootstrap-select\js\i18n\defaults-pt_BR.min.js" />
+    <Content Include="Content\bootstrap-select\js\i18n\defaults-pt_PT.js" />
+    <Content Include="Content\bootstrap-select\js\i18n\defaults-pt_PT.min.js" />
+    <Content Include="Content\bootstrap-select\js\i18n\defaults-ro_RO.js" />
+    <Content Include="Content\bootstrap-select\js\i18n\defaults-ro_RO.min.js" />
+    <Content Include="Content\bootstrap-select\js\i18n\defaults-ru_RU.js" />
+    <Content Include="Content\bootstrap-select\js\i18n\defaults-ru_RU.min.js" />
+    <Content Include="Content\bootstrap-select\js\i18n\defaults-sk_SK.js" />
+    <Content Include="Content\bootstrap-select\js\i18n\defaults-sk_SK.min.js" />
+    <Content Include="Content\bootstrap-select\js\i18n\defaults-sl_SI.js" />
+    <Content Include="Content\bootstrap-select\js\i18n\defaults-sl_SI.min.js" />
+    <Content Include="Content\bootstrap-select\js\i18n\defaults-sv_SE.js" />
+    <Content Include="Content\bootstrap-select\js\i18n\defaults-sv_SE.min.js" />
+    <Content Include="Content\bootstrap-select\js\i18n\defaults-tr_TR.js" />
+    <Content Include="Content\bootstrap-select\js\i18n\defaults-tr_TR.min.js" />
+    <Content Include="Content\bootstrap-select\js\i18n\defaults-ua_UA.js" />
+    <Content Include="Content\bootstrap-select\js\i18n\defaults-ua_UA.min.js" />
+    <Content Include="Content\bootstrap-select\js\i18n\defaults-zh_CN.js" />
+    <Content Include="Content\bootstrap-select\js\i18n\defaults-zh_CN.min.js" />
+    <Content Include="Content\bootstrap-select\js\i18n\defaults-zh_TW.js" />
+    <Content Include="Content\bootstrap-select\js\i18n\defaults-zh_TW.min.js" />
+    <Content Include="Content\bootstrap-touchspin\jquery.bootstrap-touchspin.css" />
+    <Content Include="Content\bootstrap-touchspin\jquery.bootstrap-touchspin.js" />
+    <Content Include="Content\bootstrap-touchspin\jquery.bootstrap-touchspin.min.css" />
+    <Content Include="Content\bootstrap-touchspin\jquery.bootstrap-touchspin.min.js" />
     <Content Include="Content\customer.css" />
     <Content Include="Content\blog.css" />
     <Content Include="Content\flexslider.css" />
@@ -243,12 +364,91 @@
     <Content Include="Content\fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Content\jquery.bxslider.css" />
     <Content Include="Content\jquery.mobile-menu.css" />
+    <Content Include="Content\layout\css\layout.css" />
+    <Content Include="Content\layout\js\layout.js" />
+    <Content Include="Content\layout\themes\light.css" />
     <Content Include="Content\owl.carousel.css" />
     <Content Include="Content\owl.theme.css" />
     <Content Include="Content\revslider.css" />
     <Content Include="Content\simple-line-icons.css" />
     <Content Include="Content\Site.css" />
     <Content Include="Content\style.css" />
+    <Content Include="Content\tinymce\jquery.tinymce.min.js" />
+    <Content Include="Content\tinymce\license.txt" />
+    <Content Include="Content\tinymce\plugins\advlist\plugin.min.js" />
+    <Content Include="Content\tinymce\plugins\anchor\plugin.min.js" />
+    <Content Include="Content\tinymce\plugins\autolink\plugin.min.js" />
+    <Content Include="Content\tinymce\plugins\autoresize\plugin.min.js" />
+    <Content Include="Content\tinymce\plugins\autosave\plugin.min.js" />
+    <Content Include="Content\tinymce\plugins\bbcode\plugin.min.js" />
+    <Content Include="Content\tinymce\plugins\charmap\plugin.min.js" />
+    <Content Include="Content\tinymce\plugins\codesample\css\prism.css" />
+    <Content Include="Content\tinymce\plugins\codesample\plugin.min.js" />
+    <Content Include="Content\tinymce\plugins\code\plugin.min.js" />
+    <Content Include="Content\tinymce\plugins\colorpicker\plugin.min.js" />
+    <Content Include="Content\tinymce\plugins\contextmenu\plugin.min.js" />
+    <Content Include="Content\tinymce\plugins\directionality\plugin.min.js" />
+    <Content Include="Content\tinymce\plugins\emoticons\img\smiley-cool.gif" />
+    <Content Include="Content\tinymce\plugins\emoticons\img\smiley-cry.gif" />
+    <Content Include="Content\tinymce\plugins\emoticons\img\smiley-embarassed.gif" />
+    <Content Include="Content\tinymce\plugins\emoticons\img\smiley-foot-in-mouth.gif" />
+    <Content Include="Content\tinymce\plugins\emoticons\img\smiley-frown.gif" />
+    <Content Include="Content\tinymce\plugins\emoticons\img\smiley-innocent.gif" />
+    <Content Include="Content\tinymce\plugins\emoticons\img\smiley-kiss.gif" />
+    <Content Include="Content\tinymce\plugins\emoticons\img\smiley-laughing.gif" />
+    <Content Include="Content\tinymce\plugins\emoticons\img\smiley-money-mouth.gif" />
+    <Content Include="Content\tinymce\plugins\emoticons\img\smiley-sealed.gif" />
+    <Content Include="Content\tinymce\plugins\emoticons\img\smiley-smile.gif" />
+    <Content Include="Content\tinymce\plugins\emoticons\img\smiley-surprised.gif" />
+    <Content Include="Content\tinymce\plugins\emoticons\img\smiley-tongue-out.gif" />
+    <Content Include="Content\tinymce\plugins\emoticons\img\smiley-undecided.gif" />
+    <Content Include="Content\tinymce\plugins\emoticons\img\smiley-wink.gif" />
+    <Content Include="Content\tinymce\plugins\emoticons\img\smiley-yell.gif" />
+    <Content Include="Content\tinymce\plugins\emoticons\plugin.min.js" />
+    <Content Include="Content\tinymce\plugins\fullpage\plugin.min.js" />
+    <Content Include="Content\tinymce\plugins\fullscreen\plugin.min.js" />
+    <Content Include="Content\tinymce\plugins\help\img\logo.png" />
+    <Content Include="Content\tinymce\plugins\help\plugin.min.js" />
+    <Content Include="Content\tinymce\plugins\hr\plugin.min.js" />
+    <Content Include="Content\tinymce\plugins\imagetools\plugin.min.js" />
+    <Content Include="Content\tinymce\plugins\image\plugin.min.js" />
+    <Content Include="Content\tinymce\plugins\importcss\plugin.min.js" />
+    <Content Include="Content\tinymce\plugins\insertdatetime\plugin.min.js" />
+    <Content Include="Content\tinymce\plugins\legacyoutput\plugin.min.js" />
+    <Content Include="Content\tinymce\plugins\link\plugin.min.js" />
+    <Content Include="Content\tinymce\plugins\lists\plugin.min.js" />
+    <Content Include="Content\tinymce\plugins\media\plugin.min.js" />
+    <Content Include="Content\tinymce\plugins\nonbreaking\plugin.min.js" />
+    <Content Include="Content\tinymce\plugins\noneditable\plugin.min.js" />
+    <Content Include="Content\tinymce\plugins\pagebreak\plugin.min.js" />
+    <Content Include="Content\tinymce\plugins\paste\plugin.min.js" />
+    <Content Include="Content\tinymce\plugins\preview\plugin.min.js" />
+    <Content Include="Content\tinymce\plugins\print\plugin.min.js" />
+    <Content Include="Content\tinymce\plugins\save\plugin.min.js" />
+    <Content Include="Content\tinymce\plugins\searchreplace\plugin.min.js" />
+    <Content Include="Content\tinymce\plugins\spellchecker\plugin.min.js" />
+    <Content Include="Content\tinymce\plugins\tabfocus\plugin.min.js" />
+    <Content Include="Content\tinymce\plugins\table\plugin.min.js" />
+    <Content Include="Content\tinymce\plugins\template\plugin.min.js" />
+    <Content Include="Content\tinymce\plugins\textcolor\plugin.min.js" />
+    <Content Include="Content\tinymce\plugins\textpattern\plugin.min.js" />
+    <Content Include="Content\tinymce\plugins\toc\plugin.min.js" />
+    <Content Include="Content\tinymce\plugins\visualblocks\css\visualblocks.css" />
+    <Content Include="Content\tinymce\plugins\visualblocks\plugin.min.js" />
+    <Content Include="Content\tinymce\plugins\visualchars\plugin.min.js" />
+    <Content Include="Content\tinymce\plugins\wordcount\plugin.min.js" />
+    <Content Include="Content\tinymce\skins\lightgray\content.inline.min.css" />
+    <Content Include="Content\tinymce\skins\lightgray\content.min.css" />
+    <Content Include="Content\tinymce\skins\lightgray\fonts\tinymce-small.svg" />
+    <Content Include="Content\tinymce\skins\lightgray\fonts\tinymce.svg" />
+    <Content Include="Content\tinymce\skins\lightgray\img\anchor.gif" />
+    <Content Include="Content\tinymce\skins\lightgray\img\loader.gif" />
+    <Content Include="Content\tinymce\skins\lightgray\img\object.gif" />
+    <Content Include="Content\tinymce\skins\lightgray\img\trans.gif" />
+    <Content Include="Content\tinymce\skins\lightgray\skin.min.css" />
+    <Content Include="Content\tinymce\themes\inlite\theme.min.js" />
+    <Content Include="Content\tinymce\themes\modern\theme.min.js" />
+    <Content Include="Content\tinymce\tinymce.min.js" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\fontawesome-webfont.svg" />
     <Content Include="fonts\glyphicons-halflings-regular.html" />
@@ -374,6 +574,15 @@
     <Content Include="Areas\Customer\Views\Shared\_ProfileLayout.cshtml" />
     <Content Include="Areas\Customer\Views\User\SendRequest.cshtml" />
     <Content Include="Areas\Customer\Views\Product\Insert.cshtml" />
+    <Content Include="Content\bootstrap-select\css\bootstrap-select.css.map" />
+    <Content Include="Content\bootstrap-select\js\bootstrap-select.js.map" />
+    <Content Include="Content\tinymce\langs\readme.md" />
+    <Content Include="Content\tinymce\skins\lightgray\fonts\tinymce-small.eot" />
+    <Content Include="Content\tinymce\skins\lightgray\fonts\tinymce-small.ttf" />
+    <Content Include="Content\tinymce\skins\lightgray\fonts\tinymce-small.woff" />
+    <Content Include="Content\tinymce\skins\lightgray\fonts\tinymce.eot" />
+    <Content Include="Content\tinymce\skins\lightgray\fonts\tinymce.ttf" />
+    <Content Include="Content\tinymce\skins\lightgray\fonts\tinymce.woff" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\bootstrap\css\bootstrap-theme.css" />
     <Content Include="Scripts\bootstrap\css\bootstrap-theme.min.css" />
@@ -458,7 +667,6 @@
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\Shared\_Alert.cshtml" />
     <Content Include="Views\Account\ResetPassword.cshtml" />
-    <Content Include="Views\Product\Add.cshtml" />
     <Content Include="Views\Product\DetailProduct.cshtml" />
     <Content Include="Views\Product\ViewListProduct.cshtml" />
     <Content Include="Views\View.cshtml" />
