--- a/Vanp.Web/Vanp.Web.csproj
+++ b/Vanp.Web/Vanp.Web.csproj
@@ -537,6 +537,7 @@
     <Content Include="images\syncfusion-icons.png" />
     <Content Include="images\to-top-arrow.png" />
     <Content Include="images\top-bg.gif" />
+    <Content Include="Scripts\apps\products.js" />
     <Content Include="Scripts\apps\request.js" />
     <Content Include="Scripts\apps\login.js" />
     <Content Include="Scripts\apps\validate-addpro.js" />
