--- a/Vanp.DAL/Vanp.DAL.csproj
+++ b/Vanp.DAL/Vanp.DAL.csproj
@@ -128,9 +128,11 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Vanp.edmx</DependentUpon>
     </Compile>
+    <Compile Include="Utils\Enum\Role.cs" />
     <Compile Include="Utils\Enum\RequestType.cs" />
     <Compile Include="Utils\Enum\StatusSystem.cs" />
     <Compile Include="Utils\Extentions\Extention.cs" />
+    <Compile Include="Utils\Mail\VanpMail.cs" />
     <Compile Include="Utils\Mail\SendMail.cs" />
     <Compile Include="Utils\Random\RandomHelper.cs" />
     <Compile Include="Utils\Sercurity\Sercurity.cs" />
